--- a/.github/workflows/cron-request.yml
+++ b/.github/workflows/cron-request.yml
@@ -2,7 +2,7 @@ name: Cron Backend Request
 
 on:
   schedule:
-    - cron: "- cron: '15 10 * * 1-5'"
+    - cron: '15 10 * * 1-5'
   workflow_dispatch:
 
 jobs:
